--- a/index.html
+++ b/index.html
@@ -1,98 +1,90 @@
 <!DOCTYPE html>
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <style>
 body {
     background-color: black;
     margin: 0;
-    padding:0;
+    padding: 0;
 }
-svg {
-}
+
+svg {}
+
 .node {
     stroke: none;
     fill: white;
 }
 </style>
-<svg ></svg>
+<svg></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 var width = window.innerWidth,
     chartWidth = width,
     height = window.innerHeight,
-    svg = d3.select("svg").attr('width',width).attr('height',height),
-    color = d3.scaleOrdinal(d3.schemeCategory10);
-
-// var nodes = [
-//     { id: "a"},
-//     { id: "b"},
-//     { id: "c"},
-//     { id: "d"},
-//     { id: "e"},
-//     { id: "f"},
-//     { id: "g"},
-//     { id: "h"},
-//     { id: "i"},
-//     { id: "j"},
-//     { id: "k"},
-//     { id: "l"},
-//     { id: "m"},
-//     { id: "n"},
-//     { id: "o"},
-//     { id: "p"},
-//     { id: "q"}
-// ]
+    svg = d3.select("svg").attr('width', width).attr('height', height);
 
 var nodes = [];
 
-for (var i = 0; i < 42000; i++) {
-    var myX = width/4 + Math.random()*width/2;
-    var myY = height/4+Math.random()*height/2;
+function addNodes(n, max) {
+    for (var i = 0; i < n; i++) {
+        if (nodes.length < max) {
+            var myX = width / 4 + Math.random() * width / 2;
+            var myY = height / 4 + Math.random() * height / 2;
 
-    myX = Math.random()*width;
-    myY = Math.random()*height;
+            myX = Math.random() * width;
+            myY = Math.random() * height;
 
-    myX = 25 + (width-50)*Math.random();
-    myY = 25 + (height-50)*Math.random();
+            myX = 25 + (width - 50) * Math.random();
+            myY = 25 + (height - 50) * Math.random();
 
-    nodes.push({ 'id': i, 'r': 1, 'x': myX, 'y': myY});
+            nodes.push({ 'id': i, 'r': 1, 'x': myX, 'y': myY });
+        }
+    }
 }
 
+function removeNodes(n) {
+    for (var i = nodes.length; i > nodes.length-n; i++) {
+        if (nodes.length > 0) {
+            var randomIndex = Math.floor( nodes.length * Math.random )
+            nodes.splice(randomIndex,1)
+        }
+    }
+}
+
+addNodes(42000, 42000);
+
+
+
 var simulation = d3.forceSimulation(nodes)
-    // .force("link", d3.forceLink(links).distance(200))
-    // .force("x", d3.forceX(width/2))
-    // .force("y", d3.forceY(height/2))
-    // .force("link", d3.forceLink(links).id(function(d) { return d.index }))
-    // .force("charge", d3.forceManyBody())
-    // .force("collide",d3.forceCollide( function(d){return d.r + 8 }).iterations(16) )
-    // .force("charge", d3.forceManyBody())
-    // .force("center", d3.forceCenter(width / 2, height / 2))
-    // .force("y", d3.forceY(0))
-    // .force("x", d3.forceX(0))
-    .force("collide", d3.forceCollide(function(d){return d.r + 0.5}).iterations(1))
-    // .force("charge", d3.forceManyBody().strength(100))
+    .force("center", d3.forceCenter(width / 2, height / 2))
+    // .force("y", d3.forceY(width/2))
+    // .force("x", d3.forceX(height/2))
+    .force("collide", d3.forceCollide(function(d) { return d.r + 0.5 }).strength(2))
+    // .force("charge", d3.forceManyBody().strength(1))
     .alpha(1)
-    .alphaDecay(0.5)
+    .alphaDecay(0.00)
     .on("tick", ticked)
 
 
 var g = svg.append("g"),
-    node = g.append("g").selectAll(".node");
+    node = svg.selectAll(".node");
 
 update();
 
 function update() {
     var beginTime = d3.now();
+
     function drawGraph() {
         // Apply the general update pattern to the nodes.
         node = node.data(nodes, function(d) { return d.id; });
         node.exit().remove();
         node = node.enter().append("circle")
-            .attr('class','node')
-            .attr("fill", function(d) { return color(d.id); })
+            .attr('class', 'node')
+            .merge(node)
             .attr('cx', function(d) { return d.x; })
             .attr('cy', function(d) { return d.y; })
             .attr("r", function(d) { return d.r; });
     }
-   
+
     drawGraph();
 
     // Update and restart the simulation.
@@ -100,26 +92,8 @@ function update() {
     simulation.alpha(1).restart();
     simulation.on("end", function() {
         console.log('calc done', d3.now() - beginTime);
-        console.log(nodes);
 
     })
-}
-
-function dragstarted(d) {
-    simulation.restart();
-    simulation.alpha(1.0);
-    d.fx = d.x;
-    d.fy = d.y;
-}
-
-function dragged(d) {
-    d.fx = d3.event.x;
-    d.fy = d3.event.y;
-}
-
-function dragended(d) {
-    d.fx = null;
-    d.fy = null;
 }
 
 function ticked() {
@@ -128,9 +102,7 @@ function ticked() {
 }
 
 // d3.timeout(function() {
-//     links.push({ source: a, target: b }); // Add a-b.
-//     links.push({ source: b, target: c }); // Add b-c.
-//     links.push({ source: c, target: a }); // Add c-a.
+
 //     update();
 // }, 1000);
 
