--- a/index.html
+++ b/index.html
@@ -20,23 +20,24 @@ svg {}
 var width = window.innerWidth,
     chartWidth = width,
     height = window.innerHeight,
-    svg = d3.select("svg").attr('width', width).attr('height', height);
+    svg = d3.select("svg").attr('width', width).attr('height', height),
+    nodeRadius = 1.5;
 
 var nodes = [];
 
 function addNodes(n, max) {
     for (var i = 0; i < n; i++) {
         if (nodes.length < max) {
-            var myX = width / 4 + Math.random() * width / 2;
-            var myY = height / 4 + Math.random() * height / 2;
+            // var myX = width / 4 + Math.random() * width / 2;
+            // var myY = height / 4 + Math.random() * height / 2;
 
-            myX = Math.random() * width;
-            myY = Math.random() * height;
+            var myX = Math.random() * width;
+            var myY = Math.random() * height;
 
-            myX = 25 + (width - 50) * Math.random();
-            myY = 25 + (height - 50) * Math.random();
+            // var myX = 25 + (width - 50) * Math.random();
+            // var myY = 25 + (height - 50) * Math.random();
 
-            nodes.push({ 'id': i, 'r': 1, 'x': myX, 'y': myY });
+            nodes.push({ 'id': i, 'r': nodeRadius, 'x': myX, 'y': myY });
         }
     }
 }
@@ -58,7 +59,7 @@ var simulation = d3.forceSimulation(nodes)
     .force("center", d3.forceCenter(width / 2, height / 2))
     // .force("y", d3.forceY(width/2))
     // .force("x", d3.forceX(height/2))
-    .force("collide", d3.forceCollide(function(d) { return d.r + 0.5 }).strength(2))
+    .force("collide", d3.forceCollide(function(d) { return d.r + 2 }).strength(2))
     // .force("charge", d3.forceManyBody().strength(1))
     .alpha(1)
     .alphaDecay(0.00)
@@ -97,9 +98,19 @@ function update() {
 }
 
 function ticked() {
-    node.attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; })
+
+    // ordinary tick function for force layout
+    // node.attr("cx", function(d) { return d.x; })
+    //     .attr("cy", function(d) { return d.y; })
+
+    // Bounded force layout (https://bl.ocks.org/mbostock/1129492)
+    // Math.max( nodeRadius, Math.min(width - nodeRadius, d.x) )
+    // the function above is useful for returning nodes positions within the svg and not outside of it.
+    node.attr("cx", function(d) { return d.x = Math.max( nodeRadius, Math.min(width - nodeRadius, d.x) ); })
+        .attr("cy", function(d) { return d.y = Math.max( nodeRadius, Math.min(height - nodeRadius, d.y) ); })
 }
+
+
 
 // d3.timeout(function() {
 
