--- a/index.html
+++ b/index.html
@@ -1,22 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<style>
-body {
-    background-color: black;
-    margin: 0;
-    padding: 0;
-}
-
-svg {
-    /*    width: 1024px;
-    height: 768px;*/
-}
-
-.node {
-    stroke: none;
-    fill: white;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 <svg></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
