--- a/canvas.html
+++ b/canvas.html
@@ -8,231 +8,350 @@
 //spazio per interfaccia a lato SX 850px, circa il 22%
 
 var width = window.innerWidth,
-    height = window.innerHeight,
-    svg = d3.select("svg").attr('width', width).attr('height', height),
-    canvas = document.querySelector("canvas"),
-    context = canvas.getContext("2d"),
-    nodeRadius = 1;
+  height = window.innerHeight,
+  svg = d3.select("svg").attr('width', width).attr('height', height),
+  canvas = document.querySelector("canvas"),
+  context = canvas.getContext("2d"),
+  nodeRadius = 1,
+  nodes = [];
 
 d3.select(canvas)
-    .attr('width', width * 2)
-    .style('width', width + 'px')
-    .attr('height', height * 2)
-    .style('height', height + 'px')
+  .attr('width', width * 2)
+  .style('width', width + 'px')
+  .attr('height', height * 2)
+  .style('height', height + 'px')
 
 context.scale(2, 2);
 
-var nodes = [];
+d3.tsv('./assets/data/dati-studenti-professori.tsv', function(err, data) {
+  if (err) {
+    throw err;
+  }
+  // console.log(data);
 
-function addNodes(n) {
-    for (var i = 0; i < n; i++) {
-        var myX = Math.random() * width;
-        var myY = Math.random() * height;
+  data.forEach(function(d) {
+    var myX = width * 0.22 + width * 0.78 * Math.random();
+    var myY = Math.random() * height;
+    d.x = myX;
+    d.y = myY;
+    d.r = 1;
+  })
+  console.log(data);
+  nodes = data;
 
-        var random = Math.random();
+  var tempData = [];
+  for (var i = 0; i < data.length; i += 10) {
+    tempData.push(data[i]);
+  }
+  nodes = tempData;
 
-        var role;
 
-        if (random > 0.07) {
-            role = 'studente';
-        } else {
-            role = 'professore';
-        }
-
-        nodes.push({ 'id': i, 'r': nodeRadius, 'x': myX, 'y': myY, 'role': role });
-    }
-}
-
-function removeNodes(n) {
-    for (var i = nodes.length; i > nodes.length - n; i++) {
-        if (nodes.length > 0) {
-            var randomIndex = Math.floor(nodes.length * Math.random)
-            nodes.splice(randomIndex, 1)
-        }
-    }
-}
-
-//addNodes(3750);
-
-d3.tsv('./assets/dati-studenti-professori.tsv', function(err, data) {
-    if (err) {
-        throw err;
-    }
-    // console.log(data);
-
-    data.forEach(function(d){
-        var myX = width*0.22 + width*0.78 *Math.random();
-        var myY = Math.random() * height;
-        d.x=myX;
-        d.y=myY;
-        d.r=1;
-    })
-    console.log(data);
-    nodes=data;
 })
 
 var collide = d3.forceCollide(function(d) { return d.r + 1 })
 
 var simulation = d3.forceSimulation(nodes)
-    // .force('center', d3.forceCenter(width/2, height/2))
-    .force("collide", null)
-    .force('x', null)
-    .force('y', null)
-    .force('charge', null)
-    .alpha(1)
-    .alphaMin(0.2)
-    .alphaDecay(0.01)
-    .on("tick", function(){
-        ticked(nodes)
-    })
-    // .on("tick", null)
-    .on("end", function() {
-        console.log('calc done');
-    })
+  // .force('center', d3.forceCenter(width/2, height/2))
+  .force("collide", null)
+  .force('x', null)
+  .force('y', null)
+  .force('charge', null)
+  .alpha(1)
+  .alphaMin(0.1)
+  .alphaDecay(0.01)
+  .on("tick", function() {
+    ticked(nodes)
+  })
+  // .on("tick", null)
+  .on("end", function() {
+    console.log('calc done');
+  })
 
 d3.select('body').append('div')
-    .attr('class', 'ui-box')
-    .append('p')
-    .attr('id', 'force-restart')
-    .html('restart simulation')
-    .on('click', function() {
-        simulation.alpha(1).restart();
-    })
+  .attr('class', 'ui-box')
+  .append('p')
+  .attr('id', 'force-restart')
+  .html('restart simulation')
+  .on('click', function() {
+    simulation.alpha(1).restart();
+  })
 
 function tipologie(theSimulation) {
-    console.log('nodi separati per studenti, professori');
-    var forceX = d3.forceX(function(d) {
-        if (d['Tipo'] == 'studente') {
-            return width * 0.22 + 450;
-        } else {
-            return width - 135-200;
-        }
-    }).strength(0.05);
+  console.log('nodi separati per studenti, professori');
+  var forceX = d3.forceX(function(d) {
+    if (d['Tipo'] == 'studente') {
+      return width * 0.22 + 450;
+    } else {
+      return width - 135 - 200;
+    }
+  }).strength(0.05);
 
-    var forceY = d3.forceY(height / 2).strength(0.05);
+  var forceY = d3.forceY(height / 2).strength(0.05);
 
-    var charge = d3.forceManyBody().strength(-0.25);
+  var charge = d3.forceManyBody().strength(-0.2);
 
-    theSimulation
-        .force("collide", null)
-        .force('x', forceX)
-        .force('y', forceY)
-        .force('charge', charge)
-        .on("tick", function(){
-            ticked(nodes);
-        })
+  theSimulation
+    .force("collide", null)
+    .force('x', forceX)
+    .force('y', forceY)
+    .force('charge', charge)
+    .on("tick", function() {
+      ticked(nodes);
+    })
 
-    update(nodes);
+  update(nodes);
 }
 d3.select('.ui-box')
-    .append('p')
-    .html('separati per tipologia')
-    .on('click', function() {
-        tipologie(simulation);
-    })
+  .append('p')
+  .html('separati per tipologia')
+  .on('click', function() {
+    tipologie(simulation);
+  })
 
 function soloStudenti(theSimulation) {
-    console.log('solo studenti al centro');
+  console.log('solo studenti al centro');
 
-    var forceX = d3.forceX(width * 0.22 + (width * 0.78) / 2).strength(0.05);
-    var forceY = d3.forceY(height / 2).strength(0.05);
-    var charge = d3.forceManyBody().strength(-0.25);
+  var forceX = d3.forceX(width * 0.22 + (width * 0.78) / 2).strength(0.05);
+  var forceY = d3.forceY(height / 2).strength(0.05);
+  var charge = d3.forceManyBody().strength(-0.2);
 
-    var thisData = nodes.filter(function(d) {
-        return d['Tipo'] == 'studente'
+  var thisData = nodes.filter(function(d) {
+    return d['Tipo'] == 'studente'
+  })
+
+  theSimulation
+    .force("collide", null)
+    .force('x', forceX)
+    .force('y', forceY)
+    .force('charge', charge)
+    .on("tick", function() {
+      ticked(thisData);
     })
 
-    theSimulation
-        .force("collide", null)
-        .force('x', forceX)
-        .force('y', forceY)
-        .force('charge', charge)
-        .on("tick", function(){
-            ticked(thisData);
-        })    
-
-    update(thisData);
+  update(thisData);
 }
 d3.select('.ui-box')
-    .append('p')
-    .html('solo studenti al centro')
-    .on('click', function() {
-        soloStudenti(simulation);
+  .append('p')
+  .html('solo studenti al centro')
+  .on('click', function() {
+    soloStudenti(simulation);
+  })
+
+function livelli(theSimulation) {
+  console.log('solo studenti divisi per livelli T M');
+
+  var forceX = d3.forceX(function(d) {
+    if (d['Livello'] == 'T') {
+      return width * 0.22 + 360;
+    } else {
+      return width - 290;
+    }
+  }).strength(0.05);
+  var forceY = d3.forceY(height / 2).strength(0.05);
+  var charge = d3.forceManyBody().strength(-0.2);
+
+  var thisData = nodes.filter(function(d) {
+    return d['Tipo'] == 'studente'
+  })
+
+  theSimulation
+    .force("collide", null)
+    .force('x', forceX)
+    .force('y', forceY)
+    .force('charge', charge)
+    .on("tick", function() {
+      ticked(thisData);
     })
+
+  update(thisData);
+}
+d3.select('.ui-box')
+  .append('p')
+  .html('Triennale Magistrale')
+  .on('click', function() {
+    livelli(simulation);
+  })
+
+function scuole(theSimulation) {
+  console.log('studenti divisione per scuole:\nIng Ind - Inf, Ing - Civ, Arc - Urb - Cost, Des');
+  var forceX = d3.forceX(function(d) {
+    if (d['Scuola'] == 'Ing Ind - Inf') {
+      return width * 0.22 + (width * 0.78) / 5;
+    } else if (d['Scuola'] == 'Ing - Civ') {
+      return width * 0.22 + (width * 0.78) / 5 * 2;
+    } else if (d['Scuola'] == 'Arc - Urb - Cost') {
+      return width * 0.22 + (width * 0.78) / 5 * 3;
+    } else if (d['Scuola'] == 'Des') {
+      return width * 0.22 + (width * 0.78) / 5 * 4;
+    } else {
+      return width
+    }
+  }).strength(0.05);
+
+
+  var forceY = d3.forceY(height / 2).strength(0.05);
+  var charge = d3.forceManyBody().strength(-0.2);
+
+  var thisData = nodes.filter(function(d) {
+    return d['Tipo'] == 'studente'
+  })
+
+  theSimulation
+    .force("collide", null)
+    .force('x', forceX)
+    .force('y', forceY)
+    .force('charge', charge)
+    .on("tick", function() {
+      ticked(thisData);
+    })
+
+  update(thisData);
+}
+d3.select('.ui-box')
+  .append('p')
+  .html('Scuole')
+  .on('click', function() {
+    scuole(simulation);
+  })
+
+function cittadinanza(theSimulation) {
+  console.log('studenti divisi per cittadinanza');
+  var thisData = nodes.filter(function(d) {
+    return d['Tipo'] == 'studente';
+  })
+
+  var entries = d3.nest()
+    .key(function(d) { return d['Cittadinanza']; })
+    .rollup(function(d) { return d.length; })
+    .entries(thisData);
+  
+  entries = entries.sort(function(a,b){
+    return b.value - a.value;
+  })
+  console.log(entries.length)
+
+  var rowIndex = [0,0];
+  var rowVertical;
+  var rowHorizontal = 0;
+  entries.forEach(function(d,i){
+    var r = Math.sqrt(d.value*12/Math.PI);
+    var margin = 30;
+    d.r = r + margin;
+    d.x = 0 + rowHorizontal;
+    for (var j=0; j<i; j++){
+      // console.log(entries[j].r);
+      d.x += entries[j].r*2;
+    }
+    if (!rowVertical) {
+      rowVertical = d.r;
+    }
+    d.y = rowVertical;
+    d.x += r;
+
+    if(d.x > width*0.78){
+      rowIndex[0]++;
+      console.log('out', rowIndex, entries[i]);
+      rowVertical += rowVertical + d.r;
+      rowHorizontal -= d.x;
+      entries[i].x += rowHorizontal;
+      entries[i].y = rowVertical;
+    //   d.x += rowHorizontal + 15 + d.r;
+    //   d.y = rowVertical;
+    }
+    rowIndex[1]++;
+    // console.log(d);
+  })
+
+
+
+  var forceX = d3.forceX(function(d) {
+    var xposition = width;
+    entries.forEach(function(c,i) {
+      if (c.key == d['Cittadinanza']) {
+        xposition = width * 0.22 + c.x;   
+      }
+    })
+    return xposition;
+  }).strength(0.05);
+
+
+  var forceY = d3.forceY(function(d){
+    var yposition = height/2;
+    entries.forEach(function(c,i) {
+      if (c.key == d['Cittadinanza']) {
+        yposition = c.y;   
+      }
+    })
+    return yposition
+  }).strength(0.05);
+  var charge = d3.forceManyBody().strength(-0.2);
+
+  theSimulation
+    .force("collide", null)
+    .force('x', forceX)
+    .force('y', forceY)
+    .force('charge', charge)
+    .on("tick", function() {
+      ticked(thisData);
+    })
+
+  update(thisData);
+}
+d3.select('.ui-box')
+  .append('p')
+  .html('Cittadinanza')
+  .on('click', function() {
+    cittadinanza(simulation);
+  })
 
 
 var g = svg.append("g"),
-    node = svg.selectAll(".node");
+  node = svg.selectAll(".node");
 
 // update();
 
 function update(dataNodes) {
-    var beginTime = d3.now();
+  var beginTime = d3.now();
 
-    function drawGraph() {
-        // Apply the general update pattern to the nodes.
-        node = node.data(dataNodes, function(d) { return d['ID']; });
-        
-        node.exit().remove();
+  function drawGraph() {
+    // Apply the general update pattern to the nodes.
+    node = node.data(dataNodes, function(d) { return d['ID']; });
+    node.exit().remove();
+    node = node.enter().merge(node)
+  }
+  // drawGraph();
 
-        node = node.enter().merge(node)
-        // .append("circle")
-        // .attr('class', 'node')
-        
-        // .attr("r", function(d) { return d.r; })
-        // .attr('cx', function(d) { return d.x; })
-        // .attr('cy', function(d) { return d.y; })
-    }
-    // drawGraph();
-
-    // Update and restart the simulation.
-    simulation.nodes(dataNodes);
-    simulation.alpha(1).restart();
-    // simulation.on("end", function() {
-    //     console.log('calc done', d3.now() - beginTime);
-    // })
+  // Update and restart the simulation.
+  simulation
+    .nodes(dataNodes)
+    .alpha(1)
+    .restart();
 }
 
 function ticked(nodes) {
-    context.clearRect(0, 0, width, height);
-    context.save();
-    // context.translate(width / 2, height / 2 + 40);
+  context.clearRect(0, 0, width, height);
+  // context.save();
+  // context.translate(width / 2, height / 2 + 40);
 
-    // context.beginPath();
-    // graph.links.forEach(drawLink);
-    // context.strokeStyle = "#aaa";
-    // context.stroke();
+  // context.beginPath();
+  // graph.links.forEach(drawLink);
+  // context.strokeStyle = "#aaa";
+  // context.stroke();
 
-    context.beginPath();
-    nodes.forEach(drawNode);
-    context.fillStyle = '#fff';
-    context.fill();
-    // context.strokeStyle = "#fff";
-    // context.stroke();
+  context.beginPath();
+  nodes.forEach(drawNode);
+  context.fillStyle = '#fff';
+  context.fill();
+  // context.strokeStyle = "#fff";
+  // context.stroke();
 
-    context.restore();
-    // console.log('tick')
+  // context.restore();
+  // console.log('tick')
 }
 
 function drawNode(d) {
-    context.moveTo(d.x + d.r, d.y);
-    context.arc(d.x, d.y, d.r, 0, 2 * Math.PI);
+  context.moveTo(d.x + d.r, d.y);
+  context.arc(d.x, d.y, d.r, 0, 2 * Math.PI);
 }
 
-
-// d3.timeout(function() {
-//     tipologie(simulation);
-// }, 500, d3.now());
-
-// d3.timeout(function() {
-//     console.log('split');
-
-//     simulation
-//         .force("x", forceX)
-//         .force('y', forceY)
-//         .force('charge', charge)
-//         // .force('collide', collide);
-
-//     update();
-// }, 1000, d3.now());
 </script>
