--- a/index.html
+++ b/index.html
@@ -1,145 +1,455 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" type="text/css" href="style.css">
-<svg></svg>
+<canvas></canvas>
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/hidpi-canvas@1.0.10/dist/hidpi-canvas.min.js"></script> -->
 <script>
+//spazio per interfaccia a lato SX 850px, circa il 22%
+
 var width = window.innerWidth,
-    height = window.innerHeight,
-    svg = d3.select("svg").attr('width', width).attr('height', height),
-    nodeRadius = 1;
+  height = window.innerHeight,
+  svg = d3.select("svg").attr('width', width).attr('height', height),
+  canvas = document.querySelector("canvas"),
+  context = canvas.getContext("2d"),
+  nodeRadius = 1,
+  nodes = [];
 
-var nodes = [];
+d3.select(canvas)
+  .attr('width', width * 2)
+  .style('width', width + 'px')
+  .attr('height', height * 2)
+  .style('height', height + 'px')
 
-function addNodes(n) {
-    for (var i = 0; i < n; i++) {
-        var myX = Math.random() * width;
-        var myY = Math.random() * height;
+context.scale(2, 2);
 
-        var myX2 = Math.random() * width;
-        var myY2 = Math.random() * height;
+d3.tsv('./assets/data/dati-studenti-professori.tsv', function(err, data) {
+  if (err) {
+    throw err;
+  }
+  // console.log(data);
 
-        var random = Math.random();
-
-        var role;
-
-        if (random > 0.07) {
-            role = 'studente';
-        } else {
-            role = 'prof';
-        }
-
-        nodes.push({ 'id': i, 'r': nodeRadius, 'x': myX, 'y': myY, 'role': role });
-    }
-}
-
-function removeNodes(n) {
-    for (var i = nodes.length; i > nodes.length - n; i++) {
-        if (nodes.length > 0) {
-            var randomIndex = Math.floor(nodes.length * Math.random)
-            nodes.splice(randomIndex, 1)
-        }
-    }
-}
-
-addNodes(45000/4)
-
-nodes.forEach(function(d) {
-    var myX = Math.random() * width;
+  data.forEach(function(d) {
+    var myX = width * 0.22 + width * 0.78 * Math.random();
+    myX = width * Math.random();
     var myY = Math.random() * height;
-
     d.x = myX;
     d.y = myY;
+    d.r = 1;
+  })
+  console.log(data);
+  nodes = data;
+
+  // var tempData = [];
+  // for (var i = 0; i < data.length; i += 5) {
+  //   tempData.push(data[i]);
+  // }
+  // nodes = tempData;
+
+
 })
 
-var forceX = d3.forceX(function(d) {
-    if (d.role == 'studente') {
-        return width / 4;
-    } else {
-        return width / 4 * 3;
-    }
-});
-
-var forceY = d3.forceY(height / 2);
-
-var charge = d3.forceManyBody().strength(-0.5);
-
-var collide = d3.forceCollide(function(d) { return d.r + 0.5 })
-
 var simulation = d3.forceSimulation(nodes)
+  // .force('center', d3.forceCenter(width/2, height/2))
+  .force("collide", null)
+  .force('x', null)
+  .force('y', null)
+  .force('charge', null)
+  .alpha(1)
+  .alphaMin(0.3)
+  .alphaDecay(0.01)
+  .on("tick", function() {
+    ticked(nodes)
+  })
+  // .on("tick", null)
+  .on("end", function() {
+    console.log('calc done');
+  })
+
+d3.select('body').append('div')
+  .attr('class', 'ui-box')
+  .append('p')
+  .attr('id', 'force-restart')
+  .html('restart simulation')
+  .on('click', function() {
+    simulation.alpha(1).restart();
+  })
+
+function tipologie(theSimulation) {
+  console.log('nodi separati per studenti, professori');
+  var forceX = d3.forceX(function(d) {
+    if (d['Tipo'] == 'studente') {
+      return width * 0.22 + 450;
+    } else {
+      return width - 135 - 200;
+    }
+  }).strength(0.05);
+
+  var forceY = d3.forceY(height / 2).strength(0.05);
+
+  var charge = d3.forceManyBody().strength(-0.2);
+
+  theSimulation
     .force("collide", null)
-    .force('x', null)
-    .force('y', null)
-    .force('charge', null)
-    .alpha(1)
-    .alphaMin(0.4)
-    .alphaDecay(0.01)
-    .on("tick", ticked)
+    .force('x', forceX)
+    .force('y', forceY)
+    .force('charge', charge)
+    .on("tick", function() {
+      ticked(nodes);
+    })
+
+  update(nodes);
+}
+d3.select('.ui-box')
+  .append('p')
+  .html('separati per tipologia')
+  .on('click', function() {
+    tipologie(simulation);
+  })
+
+d3.select('.ui-box')
+  .append('div')
+  .attr('id', 'alpha-meter')
+
+function soloStudenti(theSimulation) {
+  console.log('solo studenti al centro');
+
+  var forceX = d3.forceX(width * 0.22 + (width * 0.78) / 2).strength(0.05);
+  var forceY = d3.forceY(height / 2).strength(0.05);
+  var charge = d3.forceManyBody().strength(-0.2);
+
+  var thisData = nodes.filter(function(d) {
+    return d['Tipo'] == 'studente'
+  })
+
+  theSimulation
+    .force("collide", null)
+    .force('x', forceX)
+    .force('y', forceY)
+    .force('charge', charge)
+    .on("tick", function() {
+      ticked(thisData);
+    })
+
+  update(thisData);
+}
+d3.select('.ui-box')
+  .append('p')
+  .html('solo studenti al centro')
+  .on('click', function() {
+    soloStudenti(simulation);
+  })
+
+function livelli(theSimulation) {
+  console.log('solo studenti divisi per livelli T M');
+
+  var forceX = d3.forceX(function(d) {
+    if (d['Livello'] == 'T') {
+      return width * 0.22 + 360;
+    } else {
+      return width - 290;
+    }
+  }).strength(0.05);
+  var forceY = d3.forceY(height / 2).strength(0.05);
+  var charge = d3.forceManyBody().strength(-0.2);
+
+  var thisData = nodes.filter(function(d) {
+    return d['Tipo'] == 'studente'
+  })
+
+  theSimulation
+    .force("collide", null)
+    .force('x', forceX)
+    .force('y', forceY)
+    .force('charge', charge)
+    .on("tick", function() {
+      ticked(thisData);
+    })
+
+  update(thisData);
+}
+d3.select('.ui-box')
+  .append('p')
+  .html('Triennale Magistrale')
+  .on('click', function() {
+    livelli(simulation);
+  })
+
+function scuole(theSimulation) {
+  console.log('studenti divisione per scuole:\nIng Ind - Inf, Ing - Civ, Arc - Urb - Cost, Des');
+  var forceX = d3.forceX(function(d) {
+    if (d['Scuola'] == 'Ing Ind - Inf') {
+      return width * 0.22 + (width * 0.78) / 5;
+    } else if (d['Scuola'] == 'Ing - Civ') {
+      return width * 0.22 + (width * 0.78) / 5 * 2;
+    } else if (d['Scuola'] == 'Arc - Urb - Cost') {
+      return width * 0.22 + (width * 0.78) / 5 * 3;
+    } else if (d['Scuola'] == 'Des') {
+      return width * 0.22 + (width * 0.78) / 5 * 4;
+    } else {
+      return width
+    }
+  }).strength(0.05);
+
+
+  var forceY = d3.forceY(height / 2).strength(0.05);
+  var charge = d3.forceManyBody().strength(-0.2);
+
+  var thisData = nodes.filter(function(d) {
+    return d['Tipo'] == 'studente'
+  })
+
+  theSimulation
+    .force("collide", null)
+    .force('x', forceX)
+    .force('y', forceY)
+    .force('charge', charge)
+    .on("tick", function() {
+      ticked(thisData);
+    })
+
+  update(thisData);
+}
+d3.select('.ui-box')
+  .append('p')
+  .html('Scuole')
+  .on('click', function() {
+    scuole(simulation);
+  })
+
+function cittadinanza(theSimulation) {
+  console.log('studenti divisi per cittadinanza');
+  var thisData = nodes.filter(function(d) {
+    return d['Tipo'] == 'studente';
+  })
+
+  var countries = d3.nest()
+    .key(function(d) { return d['Cittadinanza']; })
+    .rollup(function(d) { return d.length; })
+    .entries(thisData);
+
+  countries = countries.sort(function(a, b) {
+    return b.value - a.value;
+  })
+
+  var cut = { floor: 0, ceil: 120 }
+
+  countries = countries.slice(cut.floor, cut.ceil);
+
+  thisData = thisData.filter(function(d) {
+    var flag = false;
+    countries.forEach(function(e) {
+      if (e.key == d['Cittadinanza']) {
+        flag = true;
+      }
+    })
+    return flag
+  })
+
+  // console.log(countries);
+
+  // positioning the citizenships according to their quantity
+  var size = {
+    top: 0,
+    bottom: height,
+    left: width * 0.3,
+    right: width * 0.9
+  }
+
+  var row = {
+    number: 0,
+    y: undefined,
+    maxradius: undefined,
+    margin: 60
+  }
+  countries.forEach(function(d, i) {
+    var margin = row.margin;
+
+    d.r = Math.sqrt(d.value / Math.PI) * 3.2;
+
+    d.x = d.r + margin;
+    if (i == 0) {
+      d.x += size.left + margin*0
+      row.maxradius = d.r * 0.35;
+    } else if (i > 0) {
+      d.x += countries[i - 1].x + countries[i - 1].r;
+    }
+
+    // console.log(d.x, size.right, d.x > size.right)
+    var k = Math.floor((d.x / size.right))
+
+    if (!row.y) {
+      row.y = d.r + margin*0;
+      // row.y = d.r/2;
+    }
+
+    if (k == 1) {
+      d.x -= countries[i - 1].x + countries[i - 1].r;
+      d.x += size.left;
+
+      row.y = countries[i - 1].y + row.maxradius + d.r + margin*0.65;
+
+      row.maxradius = d.r;
+    }
+    d.y = row.y;
+    // console.log(d.x)
+  })
+
+  console.log(countries);
+
+
+
+  var forceX = d3.forceX(function(d) {
+    var xposition = width;
+    countries.forEach(function(c, i) {
+      if (c.key == d['Cittadinanza']) {
+        xposition = c.x;
+        // if (c.key == 'ITALIANA') {
+        //   xposition -= row.margin*3
+        // }
+      }
+    })
+    return xposition;
+  })
+  forceX.strength(0.1);
+
+
+  var forceY = d3.forceY(function(d) {
+    var yposition = height / 2;
+    countries.forEach(function(c, i) {
+      if (c.key == d['Cittadinanza']) {
+        yposition = c.y;
+        // if (c.key == 'ITALIANA') {
+        //   yposition -= row.margin*3
+        // }
+      }
+    })
+    return yposition
+  })
+  forceY.strength(0.1);
+
+
+  var charge = d3.forceManyBody()
+
+  charge
+    .strength(-0.3)
+    .theta(1.5)
+
+  var collide = d3.forceCollide(function(d) { return d.r + 1 }).strength(1.3).iterations(2)
+
+  theSimulation
+    .force('x', forceX)
+    .force('y', forceY)
+    .force('charge', charge)
+    .on("tick", function() {
+      ticked(thisData, countries);
+      if (theSimulation.alpha() <= .85 ) {
+        theSimulation
+          .force('charge', charge.theta(.9))
+      }
+    })
+
+  update(thisData);
+}
+d3.select('.ui-box')
+  .append('p')
+  .html('Cittadinanza')
+  .on('click', function() {
+    cittadinanza(simulation);
+  })
 
 
 var g = svg.append("g"),
-    node = svg.selectAll(".node");
+  node = svg.selectAll(".node");
 
 // update();
 
-function update() {
-    var beginTime = d3.now();
+function update(dataNodes) {
+  var beginTime = d3.now();
 
-    function drawGraph() {
-        // Apply the general update pattern to the nodes.
-        node = node.data(nodes, function(d) { return d.id; });
-        node.exit().remove();
-        node = node.enter().append("circle")
-            .attr('class', 'node')
-            .merge(node)
-            .attr("r", function(d) { return d.r; })
-            .attr('cx', function(d) { return d.x; })
-            .attr('cy', function(d) { return d.y; })
+  function drawGraph() {
+    // Apply the general update pattern to the nodes.
+    node = node.data(dataNodes, function(d) { return d['ID']; });
+    node.exit().remove();
+    node = node.enter().merge(node)
+  }
+  // drawGraph();
+
+  // Update and restart the simulation.
+  simulation
+    .nodes(dataNodes)
+    .alpha(1)
+    .restart();
+}
+
+function ticked(nodes, cittadinanze) {
+  context.clearRect(0, 0, width, height);
+  context.save();
+
+  context.beginPath();
+  nodes.forEach(drawNode);
+  context.fillStyle = '#fff';
+  context.fill();
+
+
+
+  if (cittadinanze) {
+    if (simulation.alpha() <= 0.9) {
+      context.font = "9px Open Sans";
+      context.textAlign = "center";
+      context.fillStyle = '#fff';
+      cittadinanze.forEach(function(ccc) {
+        var thesePoints = nodes.filter(function(n) {
+          return n['Cittadinanza'] == ccc.key;
+        })
+        thesePoints = thesePoints.map(function(d) {
+          return [d.x, d.y]
+        })
+        // console.log(thesePoints)
+        if (thesePoints.length > 2) {
+          var thisHull = d3.polygonHull(thesePoints);
+          var thisCentroid = d3.polygonCentroid(thisHull);
+
+          context.fillStyle = "rgba(255,255,255,00)";
+          var tw = context.measureText(ccc.key).width +4;
+
+          var tx = thisCentroid[0];
+          var ty = thisCentroid[1] + ccc.r + 20;
+
+          context.fillRect(tx- tw/2, ty-9, tw, 12);
+          context.fillStyle = "#fff";
+          context.fillText(ccc.key, tx, ty);
+        } else {
+          context.fillStyle = "rgba(255,255,255,00)";
+          var tw = context.measureText(ccc.key).width +4;
+
+          var tx = thesePoints[0][0];
+          var ty = thesePoints[0][1] + ccc.r + 15;
+
+          context.fillRect(tx- tw/2, ty-9, tw, 12);
+
+
+          context.fillStyle = "#fff";
+          context.fillText(ccc.key, tx, ty);
+        }
+        // context.beginPath();
+        // context.strokeStyle = '#fff';
+        // // context.moveTo(ccc.x + ccc.r, ccc.y);
+        // context.arc(ccc.x, ccc.y, ccc.r, 0, 2 * Math.PI);
+        // context.stroke();
+
+      })
     }
+  }
 
-    drawGraph();
-
-    // Update and restart the simulation.
-    simulation.nodes(nodes);
-    simulation.alpha(1).restart();
-    simulation.on("end", function() {
-        console.log('calc done', d3.now() - beginTime);
-        // console.log(JSON.stringify(nodes, null, 2));
-
-    })
+  context.restore();
+  // console.log('tick')
+  d3.select('#alpha-meter').style('width', 100 * simulation.alpha() + '%')
 }
 
-function ticked() {
-    // console.log(simulation.alpha())
-    // ordinary tick function for force layout
-    // node.attr("cx", function(d) { return d.x; })
-    //     .attr("cy", function(d) { return d.y; })
-
-    // Bounded force layout (https://bl.ocks.org/mbostock/1129492)
-    // Math.max( nodeRadius, Math.min(width - nodeRadius, d.x) )
-    // the function above is useful for returning nodes positions within the svg and not outside of it.
-    node.attr("cx", function(d) { return d.x = Math.max(nodeRadius, Math.min(width - nodeRadius, d.x)); })
-        .attr("cy", function(d) { return d.y = Math.max(nodeRadius, Math.min(height - nodeRadius, d.y)); })
+function drawNode(d) {
+  context.moveTo(d.x + d.r, d.y);
+  context.arc(d.x, d.y, d.r, 0, 2 * Math.PI);
 }
 
-
-// d3.timeout(function() {
-//     console.log('collide');
-
-//     simulation
-//         .force("collide", collide)
-//     update();
-
-// }, 1000, d3.now());
-
-d3.timeout(function() {
-    console.log('split');
-    update();
-
-    simulation
-        .force("x", forceX)
-        .force('y', forceY)
-        .force('charge', charge)
-        .force('collide', null)
-}, 5000, d3.now());
 </script>
