added histogram and butterfly chart

--- a/clusters-GPU/index.html
+++ b/clusters-GPU/index.html
@@ -6,7 +6,7 @@
 
 	html,body {width:100%; height:100%; padding:0; margin:0; font-family: sans-serif;color:white;background-image: radial-gradient(ellipse farthest-corner at 80% bottom, #602397 0%, #020146 80%, #134173 100%);}
 	#ui {position: absolute; transform:translate3d(0,0,0); z-index:1; padding: 1rem 1.5rem;}
-	button.disabled {opacity:.4;}
+	button.disabled {opacity:.5;}
 </style>
 </head>
 
@@ -37,9 +37,9 @@
 		</div>
 		<div id="dimensionC" class="toggle">
 			<p>filtered by:</p>
-			<button class="disabled" name="gender">gender</button>
-			<button class="disabled" name="age">age</button>
-			<button class="disabled" name="evaluation">evaluation</button>
+			<button class="disabled" name="Genere">gender</button>
+			<button class="disabled" name="Anno di nascita">age</button>
+			<button class="disabled" name="Valutazione">evaluation</button>
 		</div>
 
 
