better implementation of 3rd dimension and other changes

--- a/clusters-GPU/index.html
+++ b/clusters-GPU/index.html
@@ -19,7 +19,7 @@
 			<button name="studente">students</button>
 			<button name="professore">teachers</button>
 		</div>
-		<p>organized by:</p>
+		<p>subdived by:</p>
 		<div id="dimensionsDrawers">
 			<select name="dimensionA" id="dimensionA">
 				<option value="">+</option>
@@ -36,7 +36,7 @@
 			</select>
 		</div>
 		<div id="dimensionC" class="toggle">
-			<p>filtered by:</p>
+			<p>organized by:</p>
 			<button class="disabled" name="Genere">gender</button>
 			<button class="disabled" name="Anno di nascita">age</button>
 			<button class="disabled" name="Valutazione">evaluation</button>
