--- a/clusters-GPU/index.html
+++ b/clusters-GPU/index.html
@@ -2,12 +2,7 @@
 
 <head>
 	<title>Poliscope – Who we are</title>
-	<style> 
-
-	html,body {width:100%; height:100%; padding:0; margin:0; font-family: sans-serif;color:white;background-image: radial-gradient(ellipse farthest-corner at 80% bottom, #602397 0%, #020146 80%, #134173 100%);}
-	#ui {position: absolute; transform:translate3d(0,0,0); z-index:1; padding: 1rem 1.5rem;}
-	button.disabled {opacity:.5;}
-</style>
+	<link rel="stylesheet" href="../common/style.css">
 </head>
 
 <body>
@@ -46,11 +41,11 @@
 	</div>
 
 
-	<script src="js/dat.gui.min.js"></script>
-	<script src="js/TweenMax.min.js"></script>
-	<script src="js/d3.v4.min.js"></script>
-	<script src="js/pixi.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="../common/js/dat.gui.min.js"></script>
+	<script src="../common/js/TweenMax.min.js"></script>
+	<script src="../common/js/d3.v4.min.js"></script>
+	<script src="../common/js/pixi.min.js"></script>
+	<script src="js/clusters.js"></script>
 
 
 </body>
