--- a/clusters-GPU/index.html
+++ b/clusters-GPU/index.html
@@ -47,6 +47,7 @@
 	<script src="../common/js/TweenMax.min.js"></script>
 	<script src="../common/js/d3.v4.min.js"></script>
 	<script src="../common/js/pixi.min.js"></script>
+	<script src="js/actions.js"></script>
 	<script src="js/clusters.js"></script>
 
 
